continued working on the real ecommerce page

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   scrollbar-width: none; /* Firefox */
 }
 body {
-  background: #eee !important;
+  /* background: #eee !important; */
 }
 ul {
   list-style: none;
