--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,15 @@ button {
 .input {
   @apply mb-8 border-[2px] border-solid border-white focus:border-[#0094FF] bg-transparent w-full mt-4 p-3 sm:p-1 text-white;
 }
+
+/* .slick-slide {
+  transition: all 1s ease-in-out;
+}
+
+.slick-slide.active {
+  opacity: 1;
+}
+
+.slick-slide:not(.active) {
+  opacity: 0.5;
+} */
