--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,34 @@ select {
 button {
   border: none;
 }
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: #1e1e1e80;
+  cursor: pointer;
+  width: 100%;
+  height: 6px;
+  margin: 1em 0;
+  border-radius: 1em;
+}
+
+input[type="range"]::-webkit-slider-runnable-track,
+input[type="range"]::-moz-range-track {
+  -webkit-appearance: none;
+  appearance: none;
+
+  /* background: #1e1e1e; */
+  /* height: 0.5rem; */
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  background-color: #1e1e1e;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+}
 
 .home {
   background: url(../public/Home.png);
@@ -91,13 +119,6 @@ button {
   z-index: 20;
   display: block;
   background: rgba(0, 0, 0, 0.5);
-}
-.dash::after {
-  content: " ";
-  width: 40%;
-  height: 1rem;
-  background: white;
-  /* pos */
 }
 
 .label {
